[package]
name = "drveela"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = { version = "1.28.2", features = ["full"] }
serde_json = "1.0.116"
simple_crypt = "0.2.3"
tower-http = { version = "0.6.1", features = ["cors"] }
regex = "1.10.4"
